--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stencil-demo",
-  "description": "",
+  "description": "An example of using Stencil to create a component library",
   "version": "0.0.1",
   "private": true,
   "license": "MIT",
@@ -18,9 +18,15 @@
     "test": "turbo run test",
     "clean": "turbo run clean && rimraf node_modules",
     "prepare": "husky install",
-    "format": "prettier --write \"**/README.md\" \"**/src/**/*.{js,jsx,ts,tsx,json}\""
+    "format": "prettier --write \"**/README.md\" \"**/src/**/*.{js,jsx,ts,tsx,json}\"",
+    "storybook": "cd storybook && npm run storybook",
+    "build-storybook": "cd storybook && build-storybook -s public"
   },
   "devDependencies": {
+    "@code-shaper/plugin": "^0.0.11",
+    "@code-shaper/react": "^0.0.11",
+    "@code-shaper/shaper-utils": "^0.0.14",
+    "@code-shaper/typescript": "^0.0.11",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.2",
     "prettier": "^2.6.2",
