--- a/packages/react-library/package.json
+++ b/packages/react-library/package.json
@@ -15,23 +15,27 @@
     "test": "jest --coverage",
     "clean": "rimraf .turbo node_modules dist coverage test-output"
   },
+  "dependencies": {
+    "@stencil/react-output-target": "^0.3.1",
+    "stencil-library": "*"
+  },
   "devDependencies": {
-    "@storybook/react": "^6.5.5",
+    "@storybook/react": "^6.5.8",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.0",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^17.0.36",
-    "@types/react": "^18.0.9",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^17.0.42",
+    "@types/react": "^18.0.12",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.16.0",
+    "eslint": "^8.17.0",
     "eslint-config-custom": "*",
-    "jest": "^28.1.0",
+    "jest": "^27.5.1",
     "jest-config-custom": "*",
-    "jest-environment-jsdom": "^28.1.0",
-    "ts-jest": "^28.0.3",
-    "typescript": "^4.7.2",
+    "jest-environment-jsdom": "^27.5.1",
+    "ts-jest": "^27.1.5",
+    "typescript": "^4.7.3",
     "typescript-config-custom": "*"
   },
   "peerDependencies": {
