--- a/packages/react-library/package.json
+++ b/packages/react-library/package.json
@@ -20,13 +20,10 @@
   },
   "devDependencies": {
     "@storybook/react": "^6.5.8",
-    "@testing-library/dom": "^8.13.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.42",
-    "@types/react": "^18.0.12",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
     "copyfiles": "^2.4.1",
     "eslint": "^8.17.0",
     "eslint-config-custom": "*",
@@ -38,6 +35,6 @@
     "typescript-config-custom": "*"
   },
   "peerDependencies": {
-    "react": "^18.*"
+    "react": "^17.*"
   }
 }
